# urbackup-gui

./: .gitignore  build.sh  pyenv_install.sh  pyproject.toml  urbackup-gui.py
urbackupgui/: __init__.py  app.py
urbackupgui/icons/: database.xcf
