[tool.poetry]
name = "urbackupgui"
version = "0.1.0"
description = "A UrBackup Client GUI to use on my system since I had issues with package dependencies with the official one."
authors = ["Mike Umana <mu304007@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
PySide6 = "^6.3.1"
QtPy = "^2.1.0"
mypy = "^0.971"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
black = "^22.6.0"
pyinstaller = "^5.2"
Pillow = "^9.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
